LinKreta_POC_Repository/force-app/main/default/objects/GM_USERS__x/GM_USERS__x.object-meta.xml
<CustomObject>
    <description>GM_USERS</description>
    <externalDataSource>WCGT_Integration</externalDataSource>
    <externalName>GM_USERS</externalName>
    <label>GM_USERS</label>
    <pluralLabel>GM_USERS</pluralLabel>
</CustomObject>