LinKreta_POC_Repository/force-app/main/default/objects/GM_USERS__x/fields/AD_USERNAME__c.field-meta.xml
<CustomField>
    <fullName>AD_USERNAME__c</fullName>
    <description>AD_USERNAME</description>
    <externalDeveloperName>AD_USERNAME</externalDeveloperName>
    <label>AD_USERNAME</label>
    <length>50</length>
    <type>Text</type>
</CustomField>