LinKreta_POC_Repository/force-app/main/default/objects/GM_USERS__x/fields/COMMON_USER__c.field-meta.xml
<CustomField>
    <fullName>COMMON_USER__c</fullName>
    <description>COMMON_USER</description>
    <externalDeveloperName>COMMON_USER</externalDeveloperName>
    <label>COMMON_USER</label>
    <length>2</length>
    <type>Text</type>
</CustomField>