LinKreta_POC_Repository/force-app/main/default/objects/GM_USERS__x/fields/EMP_ID__c.field-meta.xml
<CustomField>
    <fullName>EMP_ID__c</fullName>
    <description>EMP_ID</description>
    <externalDeveloperName>EMP_ID</externalDeveloperName>
    <label>EMP_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>