LinKreta_POC_Repository/force-app/main/default/objects/GM_USERS__x/fields/EMPLOYEECATEGORYID__c.field-meta.xml
<CustomField>
    <fullName>EMPLOYEECATEGORYID__c</fullName>
    <description>EMPLOYEECATEGORYID</description>
    <externalDeveloperName>EMPLOYEECATEGORYID</externalDeveloperName>
    <label>EMPLOYEECATEGORYID</label>
    <length>1</length>
    <type>Text</type>
</CustomField>