LinKreta_POC_Repository/force-app/main/default/objects/GM_USERS__x/fields/IS_USER_LOCK__c.field-meta.xml
<CustomField>
    <fullName>IS_USER_LOCK__c</fullName>
    <description>IS_USER_LOCK</description>
    <externalDeveloperName>IS_USER_LOCK</externalDeveloperName>
    <label>IS_USER_LOCK</label>
    <length>1</length>
    <type>Text</type>
</CustomField>