LinKreta_POC_Repository/force-app/main/default/objects/GM_USERS__x/fields/MOBILE_ACCESS__c.field-meta.xml
<CustomField>
    <fullName>MOBILE_ACCESS__c</fullName>
    <description>MOBILE_ACCESS</description>
    <externalDeveloperName>MOBILE_ACCESS</externalDeveloperName>
    <label>MOBILE_ACCESS</label>
    <length>1</length>
    <type>Text</type>
</CustomField>