LinKreta_POC_Repository/force-app/main/default/objects/GM_USERS__x/fields/ROLE_ID__c.field-meta.xml
<CustomField>
    <fullName>ROLE_ID__c</fullName>
    <description>ROLE_ID</description>
    <externalDeveloperName>ROLE_ID</externalDeveloperName>
    <label>ROLE_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>