LinKreta_POC_Repository/force-app/main/default/objects/GM_USERS__x/fields/USER_DESG__c.field-meta.xml
<CustomField>
    <fullName>USER_DESG__c</fullName>
    <description>USER_DESG</description>
    <externalDeveloperName>USER_DESG</externalDeveloperName>
    <label>USER_DESG</label>
    <length>50</length>
    <type>Text</type>
</CustomField>