LinKreta_POC_Repository/force-app/main/default/objects/GM_USERS__x/fields/USER_ID__c.field-meta.xml
<CustomField>
    <fullName>USER_ID__c</fullName>
    <description>USER_ID</description>
    <externalDeveloperName>USER_ID</externalDeveloperName>
    <label>USER_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>