LinKreta_POC_Repository/force-app/main/default/objects/GM_USERS__x/fields/USER_NAME__c.field-meta.xml
<CustomField>
    <fullName>USER_NAME__c</fullName>
    <description>USER_NAME</description>
    <externalDeveloperName>USER_NAME</externalDeveloperName>
    <label>USER_NAME</label>
    <length>50</length>
    <type>Text</type>
</CustomField>