LinKreta_POC_Repository/force-app/main/default/objects/GM_USERS__x/fields/USER_PWD__c.field-meta.xml
<CustomField>
    <fullName>USER_PWD__c</fullName>
    <description>USER_PWD</description>
    <externalDeveloperName>USER_PWD</externalDeveloperName>
    <label>USER_PWD</label>
    <length>20</length>
    <type>Text</type>
</CustomField>